--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
+            "qa": {
+              "browserTarget": "test-app:build:qa"
+            },
             "production": {
               "browserTarget": "test-app:build:production"
             },
